RESOLVED FIXED128687
Web Inspector: Get InspectorIndexedDBAgent working
https://bugs.webkit.org/show_bug.cgi?id=128687
Summary Web Inspector: Get InspectorIndexedDBAgent working
Timothy Hatcher
Reported 2014-02-12 14:04:49 PST
Make InspectorIndexedDBAgent work again.
Attachments
Patch (19.65 KB, patch)
2014-02-12 14:59 PST, Timothy Hatcher
beidson: review+
beidson: commit-queue-
Radar WebKit Bug Importer
Comment 1 2014-02-12 14:05:40 PST
Timothy Hatcher
Comment 2 2014-02-12 14:59:35 PST
Brady Eidson
Comment 3 2014-02-12 15:06:28 PST
Comment on attachment 224010 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224010&action=review > Source/WebKit2/WebProcess/Databases/IndexedDB/WebIDBFactoryBackend.cpp:62 > +typedef HashMap<String, HashSet<String>> IDBRecentDatabaseNameMap; > + > +static IDBRecentDatabaseNameMap& sharedRecentDatabaseNameMap() There's been a recent growing backlash against typedefs for maps like these. I know there's some in the IDB code already. Please don't add this new one :) > Source/WebKit2/WebProcess/Databases/IndexedDB/WebIDBFactoryBackend.cpp:129 > + ASSERT(!securityOriginIdentifier.isNull()); s/isNull/isEmpty/
Joseph Pecoraro
Comment 4 2014-02-12 15:25:10 PST
Comment on attachment 224010 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224010&action=review > Source/WebCore/ChangeLog:18 > + Make DOMStringList.h private some WebKit2 can use it. Typo: "some" => "so" > Source/WebKit2/WebProcess/Databases/IndexedDB/WebIDBFactoryBackend.cpp:100 > + callbacks->onError(IDBDatabaseError::create(IDBDatabaseException::InvalidAccessError, "Document is not allowed to use Indexed Databases")); Nit: You could use ASCIILiteral for the Error string.
Timothy Hatcher
Comment 5 2014-02-13 13:33:38 PST
Note You need to log in before you can comment on or make changes to this bug.